--- a/public/about/index.html
+++ b/public/about/index.html
@@ -251,5 +251,17 @@
   ga('create', 'Your ID', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
 </body>
 </html>
