Updates to team

--- a/public/our-team/index.html
+++ b/public/our-team/index.html
@@ -108,7 +108,7 @@
 
 <p>Over the past thirty years, Dr. Green has performed thousands of aesthetic and reconstructive plastic surgeries for patients countrywide and has become respected as a Carpal Tunnel Surgeon. He serves as Director and Surgeon at the Carpal Tunnel Center, operating on patients in both his Cleveland, OH, and Lakewood, NJ, offices.</p>
 
-<p>Dr. Green is on the Medical Staff with Privileges at Cleveland Clinic Hillcrest Hospital  and serves as Medical Director at the Legacy Surgery Center, a private State Licensed Surgery Center accredited by <a href="https://www.aaaasf.org/">AAAASF</a>, Medicare, and BWC.</p>
+<p>Dr. Green is on the Medical Staff with Privileges at Cleveland Clinic Hillcrest Hospital  and serves as Medical Director at the Legacy Surgery Center, a private State Licensed Surgery Center accredited by <a href="https://www.aaaasf.org/" target="_blank">AAAASF</a>, Medicare, and BWC.</p>
 </div>
             </div>
           </div>
@@ -125,8 +125,7 @@
               <a class="icon-rounded" href="#"><i class="icon icon-linkedin"></i></a>
               <h2>Ms. Karen N. Bird, MA OTRL</h2>
               <div class="team-text__subheading">Occupational Therapy Specialist</div>
-              <div class="team-text__body"><p>Ms. Karen Bird is an Occupational Therapy Specialist who graduated with honors from Western Michigan University in 1979 and John Carroll University in 1989. She has been practicing occupational therapy for over 40 years in various positions, among them staff therapist at St. Vincent Charity Hospital and Health Center in Cleveland, OH. Ms. Bird works with Carpal Tunnel patients at the Carpal Tunnel Center’s Cleveland office to help our patients in their recovery after Surgery. She develops protocols to strengthen their hands and facilitate sensory recovery, using desensitizing techniques if needed. She also fashions thermoplastic splints when needed. She recommends equipment and orders it, for assisting in return to work if needed.</p> <p></p>
-</div>
+              <div class="team-text__body">Ms. Karen Bird is an Occupational Therapy Specialist who graduated with honors from Western Michigan University in 1979 and John Carroll University in 1989. She has been practicing occupational therapy for over 40 years in various positions, among them staff therapist at St. Vincent Charity Hospital and Health Center in Cleveland, OH. Ms. Bird works with Carpal Tunnel patients at the Carpal Tunnel Center’s Cleveland office to help our patients in their recovery after Surgery. She develops protocols to strengthen their hands and facilitate sensory recovery, using desensitizing techniques if needed. She also fashions thermoplastic splints when needed. She recommends equipment and orders it, for assisting in return to work if needed.</div>
             </div>
           </div>
         </div>
@@ -142,7 +141,9 @@
               <a class="icon-rounded" href="#"><i class="icon icon-linkedin"></i></a>
               <h2>Dr. Kevin Dusenbury, DPT</h2>
               <div class="team-text__subheading">Doctor of Physical Therapy</div>
-              <div class="team-text__body"><p>Certified in Clinical Electro-diagnostics (EMG/NCS) <br>Certified in Diagnostic Musculoskeletal Ultrasound (MSKUS) </p> <p>Dr. Kevin Dusenbury, DPT is an Electric Testing Specialist He provides this service to patients at the Carpal Tunnel Center, enabling them to receive in-house, rapid results that help ascertain their suitability for endoscopic carpal tunnel surgery. His undergraduate degree (BA) was through Cleveland State University, Masters of Science in Physical Therapy (MSPT) Cleveland State University, Doctor of Physical Therapy (DPT) through University of Saint Augustine, FL. He completed a fellowship through the American Academy of Clinical Electrodiagnosis through which he was certified in electroneuromyography (EMG/NCS) testing. </p>
+              <div class="team-text__body"><p>Certified in Clinical Electro-diagnostics (EMG/NCS) Certified in Diagnostic Musculoskeletal Ultrasound (MSKUS)</p>
+
+<p>Dr. Kevin Dusenbury, DPT is an Electric Testing Specialist He provides this service to patients at the Carpal Tunnel Center, enabling them to receive in-house, rapid results that help ascertain their suitability for endoscopic carpal tunnel surgery. His undergraduate degree (BA) was through Cleveland State University, Masters of Science in Physical Therapy (MSPT) Cleveland State University, Doctor of Physical Therapy (DPT) through University of Saint Augustine, FL. He completed a fellowship through the American Academy of Clinical Electrodiagnosis through which he was certified in electroneuromyography (EMG/NCS) testing.</p>
 </div>
             </div>
           </div>
@@ -159,7 +160,9 @@
               <a class="icon-rounded" href="#"><i class="icon icon-linkedin"></i></a>
               <h2>Mrs. Ester Raizy Akerman, PA</h2>
               <div class="team-text__subheading">PA</div>
-              <div class="team-text__body"><p>Ester Raizy Akerman, PA-C, is a Physician Assistant with over a decade of medical experience. Her extensive plastic surgery training makes her the preferred provider for laceration repair in the New Jersey area. She currently runs a busy plastic surgery practice under the supervision of Dr. Rodney Green, M.D., FACS. PA Akerman is renowned for her exceptional individualized care and reassuring bedside manner.</p> <p>Ester Raizy Akerman, PA-C, is board certified by the National Commission on Certification of Physician Assistants (NCCPA) and practices in Lakewood, NJ.</p>
+              <div class="team-text__body"><p>Ester Raizy Akerman, PA-C, is a Physician Assistant with over a decade of medical experience. Her extensive plastic surgery training makes her the preferred provider for laceration repair in the New Jersey area. She currently runs a busy plastic surgery practice under the supervision of Dr. Rodney Green, M.D., FACS. PA Akerman is renowned for her exceptional individualized care and reassuring bedside manner.</p>
+
+<p>Ester Raizy Akerman, PA-C, is board certified by the National Commission on Certification of Physician Assistants (NCCPA) and practices in Lakewood, NJ.</p>
 </div>
             </div>
           </div>
