Changed media folder

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body><header class="site-header">
-  <a class="site-header__logo" href="https://flamboyant-feynman-6fa3ca.netlify.com/"><img src="/assets/images/elements/logo.svg" alt="Carpal Tunnel Center"></a>
+  <a class="site-header__logo" href="https://flamboyant-feynman-6fa3ca.netlify.com/"><img src="/assets/images//logo.svg" alt="Carpal Tunnel Center"></a>
   <button class="toggle-menu d-none-lg" type="button">
     <span class="toggle-menu__inner"></span>
   </button>
@@ -65,7 +65,7 @@
   </a>
   <a class="btn btn--light" href="#contact">Contact Us</a>
 </header>
-<div class="top-section" style="background-image: url(/assets/images/elements/faq-background.jpg)">
+<div class="top-section" style="background-image: url(/assets/images//faq-background.jpg)">
   <div class="container container--sm">
     <div class="row">
       <div class="col-12 col-md-6">
