--- a/public/our-team/index.html
+++ b/public/our-team/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body><header class="site-header">
-  <a class="site-header__logo" href="https://flamboyant-feynman-6fa3ca.netlify.com/"><img src="/assets/images/elements/logo.svg" alt="Carpal Tunnel Center"></a>
+  <a class="site-header__logo" href="https://flamboyant-feynman-6fa3ca.netlify.com/"><img src="/assets/images//logo.svg" alt="Carpal Tunnel Center"></a>
   <button class="toggle-menu d-none-lg" type="button">
     <span class="toggle-menu__inner"></span>
   </button>
@@ -65,7 +65,7 @@
   </a>
   <a class="btn btn--light" href="#contact">Contact Us</a>
 </header>
-<div class="top-section" style="background-image: url(/assets/images/elements/our-team-background.jpg)">
+<div class="top-section" style="background-image: url(/assets/images//our-team-background.jpg)">
   <div class="container container--sm">
     <div class="row">
       <div class="col-12 col-md-6">
@@ -95,7 +95,7 @@
       <div class="team-item">
         <div class="row flex-row-reverse-lg">
           <div class="col-12 col-sm-6 col-lg-5">
-            <div class="team-item__img"><img class="img-responsive" src="/assets/images/page-images/dr_green.jpg" alt="Dr. Rodney Green, M.D. FACS"></div>
+            <div class="team-item__img"><img class="img-responsive" src="/assets/images//dr_green.jpg" alt="Dr. Rodney Green, M.D. FACS"></div>
           </div>
           <div class="col-12 col-lg-7">
             <div class="team-text  even">
@@ -118,7 +118,7 @@
       <div class="team-item">
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-5">
-            <div class="team-item__img"><img class="img-responsive" src="/assets/images/page-images/dr_bird.jpg" alt="Ms. Karen N. Bird, MA OTRL"></div>
+            <div class="team-item__img"><img class="img-responsive" src="/assets/images//dr_bird.jpg" alt="Ms. Karen N. Bird, MA OTRL"></div>
           </div>
           <div class="col-12 col-lg-7">
             <div class="team-text ">
@@ -134,7 +134,7 @@
       <div class="team-item">
         <div class="row flex-row-reverse-lg">
           <div class="col-12 col-sm-6 col-lg-5">
-            <div class="team-item__img"><img class="img-responsive" src="/assets/images/page-images/dr_green.jpg" alt="Dr. Kevin Dusenbury, DPT"></div>
+            <div class="team-item__img"><img class="img-responsive" src="/assets/images//dr_green.jpg" alt="Dr. Kevin Dusenbury, DPT"></div>
           </div>
           <div class="col-12 col-lg-7">
             <div class="team-text  even">
@@ -153,7 +153,7 @@
       <div class="team-item">
         <div class="row">
           <div class="col-12 col-sm-6 col-lg-5">
-            <div class="team-item__img"><img class="img-responsive" src="/assets/images/page-images/mrs_akerman.jpg" alt="Mrs. Ester Raizy Akerman, PA"></div>
+            <div class="team-item__img"><img class="img-responsive" src="/assets/images//mrs_akerman.jpg" alt="Mrs. Ester Raizy Akerman, PA"></div>
           </div>
           <div class="col-12 col-lg-7">
             <div class="team-text ">
