--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
-  <meta charset="utf-8">
-  <title> FAQ - Carpal Tunnel Center  </title>
+<meta charset="utf-8">
+<title> FAQ - Carpal Tunnel Center  </title>
 
-  <!-- mobile responsive meta -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta name="description" content="This is meta description.">
+<!-- mobile responsive meta -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="description" content="Everything you need to know about carpal tunnel surgery: Is carpal tunnel surgery right for you? Open carpal tunnel surgery vs Endoscopic carpal tunnel release. And more...">
+
+<meta property="og:title" content="FAQ" />
+<meta property="og:description" content="Everything you need to know about carpal tunnel surgery: Is carpal tunnel surgery right for you? Open carpal tunnel surgery vs Endoscopic carpal tunnel release. And more..." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://carpaltunnelcenter.com/faq/" />
 
 
-  
-  
-  <link rel="stylesheet" href="/assets/css/main.min.db5baf2dc1d6db22e0068b72accdbda41bbae0b6385322f921f4dbe1b893fed2.css" integrity="sha256-21uvLcHW2yLgBotyrM29pBu64LY4UyL5IfTb4biT/tI=" crossorigin="anonymous" media="screen" />
+<meta property="og:image" content="http://carpaltunnelcenter.com/assets/images/carpal-tunnel-center.jpg">
 
+
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:url" content="http://carpaltunnelcenter.com/faq/">
+<meta name="twitter:title" content="FAQ"/>
+<meta name="twitter:description" content="Everything you need to know about carpal tunnel surgery: Is carpal tunnel surgery right for you? Open carpal tunnel surgery vs Endoscopic carpal tunnel release. And more..."/>
+
+
+<meta name="twitter:image" content="http://carpaltunnelcenter.com/assets/images/carpal-tunnel-center.jpg">
+
+
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+<link rel="manifest" href="/assets/favicon/site.webmanifest">
+<link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#16bafb">
+<link rel="shortcut icon" href="/assets/favicon/favicon.ico">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+
+
+
+
+<link rel="stylesheet" href="/assets/css/main.min.f2dcd2a7c07160f6f929c7716d040823e9da3af9ec604846e84b18bb07f428b0.css" integrity="sha256-8tzSp8BxYPb5KcdxbQQII&#43;naOvnsYEhG6EsYuwf0KLA=" crossorigin="anonymous" media="screen" />
+<script src="https://www.google.com/recaptcha/api.js?render=6LdeY8AUAAAAAIxQlgGzs1GGcNbNLdstm9k6Noxp" async defer></script>
 </head>
 <body><header class="site-header">
-  <a class="site-header__logo" href="https://carpaltunnelcenter.netlify.com/"><img src="/assets/images/logo.svg" alt="Carpal Tunnel Center"></a>
+  <a class="site-header__logo" href="http://carpaltunnelcenter.com"><img src="/assets/images/logo.svg" alt="Carpal Tunnel Center"></a>
   <button class="toggle-menu d-none-lg" type="button">
     <span class="toggle-menu__inner"></span>
   </button>
@@ -138,8 +166,8 @@
       <div class="col-12 col-sm-7 col-lg-8">
         <div class="form">
           <h2>Contact form</h2>
-          <form name="contact-form" data-netlify="true" netlify-honeypot="not-for-humans">
-            <input class="d-none" name="not-for-humans" />
+          <form name="contact-form" method="POST" action="https://us-central1-carpal-tunnel-center-form.cloudfunctions.net/form_sending">
+            <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response" />
             <div class="row gutter-20">
               <div class="col-12 col-md-6">
                 <div class="form-group">
@@ -208,6 +236,48 @@
     </div>
   </div>
 </section>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+
+$('form[name=contact-form]').on('submit', function () {
+
+var _form = $(this);
+var data = _form.serialize();
+var btn = _form.find('button[type=submit]');
+btn.text('Sending...');
+$.ajax({
+url: _form.attr('action'),
+type: _form.attr('method'),
+dataType: 'json',
+data: data,
+success: function (response) {
+    btn.text('SUBMIT');
+    if (response.success) {
+
+        _form.trigger("reset");
+        alert(response.message);
+
+        return false;
+    } else {
+        if (response.message) {
+            alert(response.message);
+        } else {
+            alert('Something wrong. Please try again.');
+        }
+    }
+    return false;
+},
+error: function (err) {
+    btn.text('SUBMIT');
+    console.log(err);
+    return false;
+}
+});
+return false;
+});
+
+</script>
+
 <footer class="site-footer">
   <div class="container container--sm">
     Copyright © 2019 Carpal Tunnel Clinic. All Rights reserved.
@@ -237,6 +307,8 @@
   ga('create', 'Your ID', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 <script>
   if (window.netlifyIdentity) {
