--- a/public/404.html
+++ b/public/404.html
@@ -41,7 +41,8 @@
 
 
 <link rel="stylesheet" href="/assets/css/main.min.f2dcd2a7c07160f6f929c7716d040823e9da3af9ec604846e84b18bb07f428b0.css" integrity="sha256-8tzSp8BxYPb5KcdxbQQII&#43;naOvnsYEhG6EsYuwf0KLA=" crossorigin="anonymous" media="screen" />
-<script src="https://www.google.com/recaptcha/api.js?render=6LdeY8AUAAAAAIxQlgGzs1GGcNbNLdstm9k6Noxp" async defer></script>
+<script src="https://www.google.com/recaptcha/api.js?render=6LdVncAUAAAAAPHpUu5pG4USDM31dffdj6c8oGUA"></script>
+
 </head>
 <body>
       <section class="not-found" style="background-image: url(/assets/images/404-bg.jpg)">
